# todo_fastapi_sample

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  makefile  mypy.ini  pyproject.toml
alembic/: env.py
migrations/: env.py
migrations/versions/: 2023_12_11_1035-7e9f51627c3c_initial_empty.py  2023_12_11_1411-9885f4f55eaf_create_table.py  2023_12_12_1023-6d79a7293d6f_create_tables.py  2023_12_12_1504-226a00e19a26_create_tables.py
src/: config.py  main.py
src/api/: __init__.py
src/api/v1/: auth.py  route.py  todos.py  users.py
src/api/v1/endpoints/: auth.py  todo.py
src/api/v1/schemas/: todo_request.py
src/core/: config.py  utils.py
src/core/lib/: auth.py
src/data/: todos.json  users.json
src/database/: migrate.py  setting.py
src/database/models/: __init__.py  base.py  todos.py  users.py
src/errors/: exception.py  messages.py
src/logger/: logger.py  logger_config.yaml
src/repository/: base.py  dependencies.py  user.py
src/repository/crud/: todo.py  user.py
src/schemas/: base.py
src/schemas/requests/: todo.py  user.py
src/schemas/response/: message.py  todo.py  token.py  user.py
src/usecase/: auth.py  base.py  dependencies.py
tests/: conftest.py
tests/api/: test_root.py
tests/api/todos/: conftest.py  test_todos.py
