[tool.poetry]
name = "todo-fastapi"
version = "0.1.0"
description = ""
authors = ["Authoer <sample@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.22"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
fastapi-debug-toolbar = "^0.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
humps = "^0.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
pyyaml = "^6.0.1"
python-json-logger = "^2.0.7"
alembic = "^1.13.0"
httpx = "^0.25.2"
pyhumps = "^3.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
mypy = "^1.6.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-postgresql = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
